--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-ca">
+<head>
+  <meta charset="utf-8">
+  <title>The Solar System</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
+<body>
   <header>
-    <title>The Solar System</title>
-    </header>
-    <body>
-      <main>
-      <img src="logo.svg" alt="…" />
-    <h1>The Solar System</h1></main>
-    <ul><li><a href="#stars">[Stars]</a></li>
-      <li><a href="terrestrial">[Terrestrial planets]</a></li>
-      <li><a href="gasgiants">[Gas giants]</a></li>
-      <li><a href="gasgiants">[Dwarf planets]</a></li>
-      <li><a href="gasgiants">[Asteroids]</a></li>
-      <li><a href="gasgiants">[Comets]</a></li>
-      <li style="list-style: none">
-        <img src="banner.svg" alt="…" />
-        <div style="margin-left: 2em">
-          The Solar System—our home in the stars The Solar System
-          is the gravitationally bound system comprising the Sun
-          and the planetary system that orbits it.
-        </div>
-      </li>
-    </ul>
-  </body>
+    <h1>The Solar System</h1>
+    <img src="images/logo.svg" alt="">
+    <nav>
+      <ul>
+        <li><a href="stars">Stars</a></li>
+        <li><a href="terrestrial-planets">Terrestrial planets</a></li>
+        <li><a href="gas-giants">Gas giants</a></li>
+        <li><a href="dwarf-planets">Dwarf planets</a></li>
+        <li><a href="asteroids">Asteroids</a></li>
+        <li><a href="comets">Comets</a></li>
+      </ul>
+    </nav>
+    <figure>
+      <img src="banner.svg" alt="…" />
+      <figcaption>The Solar System—our home in the stars</figcaption>
+    </figure>
+  </header>
+  <main>
+    <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+  </main>
+</body>
 </html>
