--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </ul>
     </nav>
     <figure>
-      <img src="banner.svg" alt="…" />
+      <img src="banner.svg" alt="…">
       <figcaption>The Solar System—our home in the stars</figcaption>
     </figure>
   </header>
